--- a/DBTest.csproj
+++ b/DBTest.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Spectre.Console" Version="0.46.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
     <PackageReference Include="Npgsql" Version="7.0.1" />
   </ItemGroup>
